welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:28: error: '<-' expected but ')' found.
    for (l < 1 to k){avance();}
                   ^FlowerPot:31: error: illegal start of simple expression
  }
  ^FlowerPot:38: error: '<-' expected but ')' found.
  for (i < 1 to 5){
                 ^FlowerPot:52: error: illegal start of simple expression
} 
^